Add new functionalities for Auth

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "SecretJWT": {
+    "Key": "fedaf7d8863b48e197b9287d492b708e"
+  },
   "ConnectionStrings": {
     "CinematrixppCon": "Data Source=.\\SQLEXPRESS;Initial Catalog=CinematrixDB; Integrated Security=true"
   },
