--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "Key": "fedaf7d8863b48e197b9287d492b708e"
   },
   "ConnectionStrings": {
-    "CinematrixppCon": "Data Source=.\\SQLEXPRESS;Initial Catalog=CinematrixDB; Integrated Security=true"
+    "CinematrixppCon": "Data Source=DESKTOP-0RO9D32;Initial Catalog=CinematrixDB; Integrated Security=true"
   },
   "Logging": {
     "LogLevel": {
